Fix scrollbar for Mozilla

--- a/src/styles/stickerPanel.css
+++ b/src/styles/stickerPanel.css
@@ -38,7 +38,7 @@
 
 .sticker-panel__list-item {
   display: flex;
-  margin-top: 5px;
+  margin-top: 3px;
   align-items: center;
   justify-content: center;
 }
@@ -50,6 +50,7 @@
   object-fit: cover;
   border-radius: 50%;
   transition: 0.3s;
+  margin-top: 3px;
 }
 
 .sticker-panel__list-item button {
@@ -178,32 +179,38 @@
   }
 }
 
-.sticker-panel ::-webkit-scrollbar {
-  width: 5px;
+@-moz-document url-prefix() {
+  .sticker-panel__list, .sticker-panel__pack {
+    scrollbar-width: thin;
+    scrollbar-color: #2a2f3b #434c5d;
+  }
+  .sticker-panel__list {
+    width: 58px;
+  }
 }
 
-.sticker-panel ::-webkit-scrollbar-button {
-  display: none;
-}
-
-.sticker-panel ::-webkit-scrollbar-track {
-  background-color: #999;
-}
-
-.sticker-panel ::-webkit-scrollbar-track-piece {
-  background-color: #434c5d;
-}
-
-.sticker-panel ::-webkit-scrollbar-thumb {
-  height: 30px;
-  background-color: #2a2f3b;
-  border-radius: 5px;
-}
-
-.sticker-panel ::-webkit-scrollbar-corner {
-  background-color: #999;
-}
-
-.sticker-panel ::-webkit-resizer {
-  background-color: #2a2f3b;
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .sticker-panel ::-webkit-scrollbar {
+    width: 5px;
+  }
+  .sticker-panel ::-webkit-scrollbar-button {
+    display: none;
+  }
+  .sticker-panel ::-webkit-scrollbar-track {
+    background-color: #999;
+  }
+  .sticker-panel ::-webkit-scrollbar-track-piece {
+    background-color: #434c5d;
+  }
+  .sticker-panel ::-webkit-scrollbar-thumb {
+    height: 30px;
+    background-color: #2a2f3b;
+    border-radius: 5px;
+  }
+  .sticker-panel ::-webkit-scrollbar-corner {
+    background-color: #999;
+  }
+  .sticker-panel ::-webkit-resizer {
+    background-color: #2a2f3b;
+  }
 }
